[package]
name = "temperature-dht22"
version = "0.1.0"
authors = ["Anton Shabanov <snakesolid@ngs.ru>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
embedded-hal = "0.2"
micromath = "1.1"
nb = "1.0"
panic-halt = "0.2"

[dependencies.stm32f1xx-hal]
version = "0.7"
features = ["rt", "stm32f103", "medium"]
